--- a/recharge.css
+++ b/recharge.css
@@ -10,20 +10,20 @@ body {
   height: 100%;
 }
 
-.body{
-  background-image: url('Images/Untitled_design.png');
-  /* background-color: #aa9ff3; */
+.mother{
+  /* background-image: url('Images/Untitled_design.png'); */
+  background-color: #050710;
   height: 100%;
   width: 100%;
   object-fit: cover;
-  display: relative;
+  position: relative;
 }
 
 .header {
   position:sticky;
   display: flex;
   justify-content: space-around;
-  background-color: white;
+  background-color: #333543;
   height: 50px;
   width: 60%;
   top: 20px;
@@ -33,7 +33,7 @@ body {
   
 }
 .headerele {
-  background-color: orange;
+ 
   justify-self: center;
   align-self: center;
   text-align: center;
@@ -41,18 +41,21 @@ body {
   border-radius: 50px;
   height: 40px;
   width: 600px;
-  padding: 10px;
+  padding: auto;
   display: flex;
+}
+.headerele>a{
+  text-align: center;
 }
 .logo {
   /* border: 2px solid; */
-  width: 20%px;
+  width: 20px;
   height: 50px;
   align-items: center;
   margin: 0px;
   position:absolute;
   margin-left: 40px;
-  margin-top: 25px;
+  margin-top: 0px;
 }
 #payoraa_logo{
   width: 120px;
@@ -60,26 +63,123 @@ body {
   
 }
 .recharge{
-  background-color: grey;
-
-.recharge > a{
+ background-color:#a098c7;
+  align-self: center;
+}
+.headerele:hover{
+  background-color: #a098c7;
+}
+.recharge a{
   text-decoration: none;
   color: aliceblue;
-}
+  text-align: center;
+
 }
 .travel {
-  background-color:grey;
+   background-color: #5b5f73;
 }
 .credit {
-  background-color:grey;
+ background-color: #5b5f73;
 }
 .login {
-  background-color:grey;
-  display: absolute;
-  right: 0px;
+  background-color: #5b5f73;
+  /* display: absolute; */
+  /* right: 5px; */
 }
 #payorapng {
   width: 80px;
   height: 40px;
   margin: auto;
 }
+
+
+.container{
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 800px 800px 400px;
+}
+.hero{
+  height: 600px;
+  margin-top: 20px;
+  /* background-color:pink; */
+  opacity: 1;
+  top: 20%;
+  /* position: absolute; */
+  width: 90%;
+  border: 2px solid;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  margin: auto;
+  margin-top: 20px;
+  display: grid;
+  grid-template-areas:"ha11 ha11 ha11"  ;
+}
+.herotabs{
+  /* border: 2px solid white; */
+ margin: 20px;
+ border-radius: 10px;
+}
+.ha1{
+ grid-area: ha11;
+ height: 500px;
+ background-color: #10111a;
+ text-align: center;
+ color: white;
+}
+#text1{
+  font-size: 80px;
+  text-align: center;
+}
+#text2{
+font-size: 300px;
+text-align: center;
+}
+#changetheway{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.ha2{
+ grid-area: ha22;
+}
+
+.ha3{
+grid-area: ha33;
+}
+
+.useful{
+  height: 800px;
+background-color: orange;
+/* position: absolute; */
+width: 100vw;
+display: grid;
+grid-template-areas: "cc rc trv";
+}
+.boxs{
+   border: 1px solid white;
+}
+.cc{
+  grid-area: cc;
+  border: 1px solid;
+  /* width: 40%; */
+  
+}
+.rc{
+  grid-area: rc;
+  border: 1px solid;
+}
+.trv{
+  grid-area: trv;
+  border: 1px solid;
+}
+.footer{
+  height: 400px;
+  width: 100vw;
+background-color: gray;
+position: absolute;
+}
+
+
+
+
+
