--- a/footer.css
+++ b/footer.css
@@ -1,7 +1,16 @@
 .footer{
+  padding: 15px;
+background-color: #ccc3d0;
+border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  height: 100px;
+  width: 100%;
 
+position: absolute;
+text-align: center;
 }
 .footertext{
     font-size: 22px;
     font-style: italic;
+  margin: auto;
 }
