--- a/fonts.css
+++ b/fonts.css
@@ -200,3 +200,8 @@
   font-weight: 400;
   font-style: normal;
 }
+.rubik-glitch-regular {
+  font-family: "Rubik Glitch", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
