--- a/fonts.css
+++ b/fonts.css
@@ -30,7 +30,7 @@
 .outfit {
   font-family: "Outfit", sans-serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: normal;
   font-style: normal;
 }
 .hanalei-regular {
