--- a/index.css
+++ b/index.css
@@ -62,6 +62,8 @@ body {
  color: white;
  position: absolute;
  background-image: url("Images/travelling hero.png") ;
+  /* background-image: url("Images/img 45.png") ; */
+ 
 }
 /* .ha1:hover{
   background-color: #a098c7;
